Started JS execution implementation
- In `exec/js`
- Docker container for JS execution
- Code for connecting Docker with Go
